modulo de seguridad con permisos por rol, herencia de usuarios entre personal y admin, seguridad configurada, constraseña hasheada